--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "homepage": "https://github.com/Rustambek9997/Morfology#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "crypto-js": "^4.0.0",
     "sqlite3": "^5.0.2"
   }
 }
